vscode: open fullscreen on start

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -30,4 +30,5 @@
     "editor.cursorBlinking": "solid",
     "terminal.integrated.fontSize": 15,
     "editor.formatOnSave": true,
+    "window.restoreFullscreen": true
 }
