--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,33 +6,28 @@ font:
 
 colors:
   primary:
-    #background: '0xfdf6e3' # base3
-    #background: '0xddf6e3' # base3
-    #background: '0xccede3' # base3
-    background: '0xd7d7d7' # base3
-    foreground: '0x666666' # base00
-    #foreground: '0x657b83' # base00
-  cursor:
-    text:   '0xfdf6e3' # base3
-    cursor: '0x657b83' # base00
+    background: '0xcccccc'
+    foreground: '0x383a42'
+
   normal:
-    black:   '0x073642' # base02
-    red:     '0xdc322f' # red
-    green:   '0x859900' # green
-    yellow:  '0xb58900' # yellow
-    blue:    '0x268bd2' # blue
-    magenta: '0xd33682' # magenta
-    cyan:    '0x2aa198' # cyan
-    white:   '0xeee8d5' # base2
+    black: '0x383a42'
+    red: '0xe45649'
+    green: '0x50a14f'
+    yellow: '0xc18401'
+    blue: '0x0184bc'
+    magenta: '0xa626a4'
+    cyan: '0x0997b3'
+    white: '0xfafafa'
+
   bright:
-    black:   '0x002b36' # base03
-    red:     '0xcb4b16' # orange
-    green:   '0x586e75' # base01
-    yellow:  '0x657b83' # base00
-    blue:    '0x839496' # base0
-    magenta: '0x6c71c4' # violet
-    cyan:    '0x93a1a1' # base1
-    white:   '0xfdf6e3' # base3
+    black: '0x383a42'
+    red: '0xe45649'
+    green: '0x50a14f'
+    yellow: '0xc18401'
+    blue: '0x0184bc'
+    magenta: '0xa626a4'
+    cyan: '0x0997b3'
+    white: '0xfafafa'
 
 key_bindings:
   # for tmux
