--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -35,4 +35,4 @@ key_bindings:
   - { key: T,        mods: Command,       chars: "\x02c" }  # new tab
   - { key: RBracket, mods: Command|Shift, chars: "\x02n" }  # select next tab
   - { key: LBracket, mods: Command|Shift, chars: "\x02p" }  # select previous tab
-  - { key: F,        mods: Command,       chars: "\x02/" }  # search (upwards) (see tmux.conf)
+  - { key: F,        mods: Command,       chars: "\x02[" }  # enter copy mode
