Move tmux status bar to the top

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,3 @@
 set-window-option -g mode-keys vi # use vi keys
 set -sg escape-time 0             # no delay for escape key press
+set-option -g status-position top # move status bar to the top
