Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
-set-window-option -g mode-keys vi # use vi keys
-set -sg escape-time 0             # no delay for escape key press
-set-option -g status-position top # move status bar to the top
+set-window-option -g mode-keys vi                          # use vi keys
+set -sg escape-time 0                                      # no delay for escape key press
+set-option -g status-position top                          # move status bar to the top
+set -g status-bg default                                   # transparent status background
+set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=blue,bright,nodim]:#[fg=black,bright,nodim]#{b:pane_current_command}'                                                        # selected tab as bold text
+set -g window-status-format '#I:#{b:pane_current_command}' # non selected tab as a usual text
