--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,3 +4,4 @@ set-option -g status-position top                          # move status bar to 
 set -g status-bg default                                   # transparent status background
 set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=blue,bright,nodim]:#[fg=black,bright,nodim]#{b:pane_current_command}'                                                        # selected tab as bold text
 set -g window-status-format '#I:#{b:pane_current_command}' # non selected tab as a usual text
+new-session -n $HOST                                       # if run as "tmux attach", create a session if one does not already exist
