--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,3 +5,5 @@ set -g status-bg default                                   # transparent status 
 set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=blue,bright,nodim]:#[fg=black,bright,nodim]#{b:pane_current_command}'                                                        # selected tab as bold text
 set -g window-status-format '#I:#{b:pane_current_command}' # non selected tab as a usual text
 new-session -n $HOST                                       # if run as "tmux attach", create a session if one does not already exist
+set -g status-left ''                                      # don't show anything on the left side of status bar
+set -g status-right '%H:%M'                                # show time on the right side of status bar
