Decrease status bar refresh interval

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,3 +7,4 @@ set -g window-status-format '#I:#{b:pane_current_command}' # non selected tab as
 new-session -n $HOST                                       # if run as "tmux attach", create a session if one does not already exist
 set -g status-left ''                                      # don't show anything on the left side of status bar
 set -g status-right '%H:%M'                                # show time on the right side of status bar
+set -g status-interval 5                                   # refresh status bar every 5 seconds
