--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,8 +2,8 @@ set-window-option -g mode-keys vi                          # use vi keys
 set -sg escape-time 0                                      # no delay for escape key press
 set-option -g status-position top                          # move status bar to the top
 set -g status-bg default                                   # transparent status background
-set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=blue,bright,nodim]:#[fg=black,bright,nodim]#{b:pane_current_command}'                                                        # selected tab as bold text
-set -g window-status-format '#I:#{b:pane_current_command}' # non selected tab as a usual text
+set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_command}>#{b:pane_current_path} '                                                        # selected tab as bold text
+set -g window-status-format '#I>#{b:pane_current_command}>#{b:pane_current_path} ' # non selected tab as a usual text
 new-session -n $HOST                                       # if run as "tmux attach", create a session if one does not already exist
 set -g status-left ''                                      # don't show anything on the left side of status bar
 set -g status-right '%H:%M'                                # show time on the right side of status bar
