Open new tmux window in the same directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,3 +8,4 @@ new-session -n $HOST                                       # if run as "tmux att
 set -g status-left ''                                      # don't show anything on the left side of status bar
 set -g status-right '%H:%M'                                # show time on the right side of status bar
 set -g status-interval 5                                   # refresh status bar every 5 seconds
+bind c new-window -c "#{pane_current_path}"                # open new window in the same directory
