--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,42 @@
-set-window-option -g mode-keys vi                          # use vi keys
-set -sg escape-time 0                                      # no delay for escape key press
-set-option -g status-position top                          # move status bar to the top
-set -g status-bg default                                   # transparent status background
-set -g window-status-current-format '#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_command}>#{b:pane_current_path} '                                                        # selected tab as bold text
-set -g window-status-format '#I>#{b:pane_current_command}>#{b:pane_current_path} ' # non selected tab as a usual text
-new-session -n $HOST                                       # if run as "tmux attach", create a session if one does not already exist
-set -g status-left ''                                      # don't show anything on the left side of status bar
-set -g status-right '%H:%M'                                # show time on the right side of status bar
-set -g status-interval 5                                   # refresh status bar every 5 seconds
-bind c new-window -c "#{pane_current_path}"                # open new window in the same directory
+##########  General settings  ##########
+
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
+
+# open new window in the same directory
+bind c new-window -c "#{pane_current_path}"
+
+
+
+##########  Better keyboard movements  ##########
+
+# use vi keys
+set-window-option -g mode-keys vi
+
+# no delay for escape key press
+set -g escape-time 0
+
+
+
+##########  Status bar settings  ##########
+
+# move status bar to the top
+set-option -g status-position top
+
+# refresh status bar every 5 seconds
+set -g status-interval 5
+
+# transparent status background
+set -g status-bg default
+
+# selected tab as bold text
+set -g window-status-current-format "#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_command}>#{b:pane_current_path} "
+
+# non selected tab as a usual text
+set -g window-status-format "#I>#{b:pane_current_command}>#{b:pane_current_path} "
+
+# don't show anything on the left side of status bar
+set -g status-left ""
+
+# show time on the right side of status bar
+set -g status-right "%H:%M"
