--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,10 +30,10 @@ set -g status-interval 5
 set -g status-bg default
 
 # selected tab as bold text
-set -g window-status-current-format "#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_command}>#{b:pane_current_path} "
+set -g window-status-current-format "#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command} "
 
 # non selected tab as a usual text
-set -g window-status-format "#I>#{b:pane_current_command}>#{b:pane_current_path} "
+set -g window-status-format "#I>#{b:pane_current_path}>#{b:pane_current_command} "
 
 # don't show anything on the left side of status bar
 set -g status-left ""
