--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ set-option -g status-position top
 set -g status-interval 5
 
 # transparent status background
-set -g status-bg default
+set -g status-bg colour248
 
 # selected tab as bold text
 set -g window-status-current-format "#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command} "
