Kill tmux window without confirmation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,8 @@ new-session -n $HOST
 # open new window in the same directory
 bind c new-window -c "#{pane_current_path}"
 
+# kill tmux window without confirmation
+bind-key & kill-window
 
 
 ##########  Better keyboard movements  ##########
@@ -15,7 +17,6 @@ set-window-option -g mode-keys vi
 
 # no delay for escape key press
 set -g escape-time 0
-
 
 
 ##########  Status bar settings  ##########
