--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,6 +4,15 @@ window:
 
 font:
   size: 16.0
+  normal:
+    family: JetBrains Mono
+    style: Regular
+  bold:
+    family: JetBrains Mono
+    style: Bold
+  italic:
+    family: JetBrains Mono
+    style: Italic
 
 colors:
   primary:
