--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -13,6 +13,11 @@ font:
   italic:
     family: JetBrains Mono
     style: Italic
+  # Offset is the extra space around each character. `offset.y` can be thought of
+  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
+  offset:
+    x: 0
+    y: 1
 
 colors:
   primary:
