Make selection in bold

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ set -g status-interval 5
 set -g status-bg colour248
 
 # selected tab as bold text
-set -g window-status-current-format "[[#[fg=black,bright,nodim]#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command}]] "
+set -g window-status-current-format "#[fg=black,bright,nodim][[#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command}]] "
 
 # non selected tab as a usual text
 set -g window-status-format "  #I>#{b:pane_current_path}>#{b:pane_current_command}   "
