--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -55,5 +55,10 @@
   "editor.lineNumbers": "on",
   "editor.fontSize": 14,
   "jestrunner.jestCommand": "node_modules/jest/bin/jest.js --forceExit",
-  "terminal.integrated.fontSize": 14
+  "terminal.integrated.fontSize": 14,
+  "telemetry.enableTelemetry": false,
+  "telemetry.enableCrashReporter": false,
+  "githubPullRequests.telemetry.enabled": false,
+  "gitlens.advanced.telemetry.enabled": false,
+  "salesforcedx-vscode-core.telemetry.enabled": false
 }
