--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -36,7 +36,9 @@
   "editor.cursorBlinking": "solid",
   "files.autoSave": "afterDelay",
   "editor.formatOnSave": true,
+  "vim.useSystemClipboard": true,
   "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
   "[javascript]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -47,7 +49,6 @@
   "[vue]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "explorer.confirmDragAndDrop": false,
   "jest.autoEnable": false,
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
