VSCode: change Explorer selection color

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -13,6 +13,9 @@
     "editor.background": "#cccccc",
     "dropdown.background": "#cccccc",
     "panel.background": "#cccccc",
+    "list.focusBackground": "#0275c7",
+    "list.focusForeground": "#FFFFFF",
+    "list.inactiveSelectionBackground": "#0275c7",
     "terminal.ansiBlack": "#000000",
     "terminal.ansiBrightBlack": "#000000",
     "terminal.ansiRed": "#c91b00",
