VSCode: format HTML with Prettier

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -68,5 +68,8 @@
   "githubPullRequests.telemetry.enabled": false,
   "gitlens.advanced.telemetry.enabled": false,
   "salesforcedx-vscode-core.telemetry.enabled": false,
-  "javascript.updateImportsOnFileMove.enabled": "always"
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
