--- a/alacritty.yml
+++ b/alacritty.yml
@@ -44,10 +44,16 @@ colors:
     cyan: '0x0997b3'
     white: '0xfafafa'
 
-key_bindings:
-  # for tmux
+key_bindings: # to get a code run "sendkey -a" on a Linux system
+  # for Tmux
   - { key: W,        mods: Command,       chars: "\x02&" }  # close tab (kill)
   - { key: T,        mods: Command,       chars: "\x02c" }  # new tab
   - { key: RBracket, mods: Command|Shift, chars: "\x02n" }  # select next tab
   - { key: LBracket, mods: Command|Shift, chars: "\x02p" }  # select previous tab
-  - { key: F,        mods: Command,       chars: "\x02[" }  # enter copy mode
+  - { key: R,        mods: Command,       chars: "\x02[" }  # enter copy mode
+  # for Emacs and Vim (see their configs for details)
+  - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC on Cmd-;
+  - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I on Cmd-I
+  - { key: O,         mods: Command,       chars: "\x20\x6f" } # send SPC-O on Cmd-O
+  - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-P on Cmd-P
+  - { key: F,         mods: Command,       chars: "\x20\x66" } # send SPC-F on Cmd-F
