--- a/alacritty.yml
+++ b/alacritty.yml
@@ -50,7 +50,7 @@ key_bindings: # to get a code run "sendkey -a" on a Linux system
   - { key: T,        mods: Command,       chars: "\x02c" }  # new tab
   - { key: RBracket, mods: Command|Shift, chars: "\x02n" }  # select next tab
   - { key: LBracket, mods: Command|Shift, chars: "\x02p" }  # select previous tab
-  - { key: F,        mods: Command,       chars: "\x02[" }  # enter copy mode
+  - { key: K,        mods: Command,       chars: "\x02[" }  # enter copy mode
   # for Emacs and Vim (see their configs for details)
   - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC on Cmd-;
   - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I on Cmd-I
