--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
+[*.ts]
+indent_style = space
+indent_size = 2
+
 [*.cs]
 indent_style = space
 indent_size = 4
