--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,3 +1,10 @@
+shell:
+  program: zsh
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux new -s main"
+
 window:
   decorations: buttonless
   dimensions:
