--- a/alacritty.yml
+++ b/alacritty.yml
@@ -57,10 +57,10 @@ key_bindings: # to get a code run "sendkey -a" on a Linux system
   # for Tmux
   - { key: W,        mods: Command,        chars: "\x02&" }  # close tab (kill)
   - { key: T,        mods: Command,        chars: "\x02c" }  # new tab
-  - { key: RBracket, mods: Command|Shift,  chars: "\x02n" }  # select next tab
-  - { key: LBracket, mods: Command|Shift,  chars: "\x02p" }  # select previous tab
+  - { key: RBracket, mods: Command,        chars: "\x02n" }  # select next tab
+  - { key: LBracket, mods: Command,        chars: "\x02p" }  # select previous tab
   - { key: F,        mods: Command,        chars: "\x02[" }  # enter copy mode
-  # for Emacs and Vim (see their configs for details)
+  # for Vim
   - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC on Cmd-;
   - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I on Cmd-I
   - { key: O,         mods: Command,       chars: "\x20\x6f" } # send SPC-O on Cmd-O
