--- a/alacritty.yml
+++ b/alacritty.yml
@@ -53,15 +53,23 @@ colors:
     cyan: '0x0997b3'
     white: '0xfafafa'
 
-key_bindings: # to get a code run "sendkey -a" on a Linux system
+key_bindings: # to get a code run "showkey -a" on a Linux system and get hex codes (example: 0x1b should be written as \x1b)
   # for Tmux
   - { key: W,        mods: Command,        chars: "\x02&" }  # close tab (kill)
   - { key: T,        mods: Command,        chars: "\x02c" }  # new tab
   - { key: RBracket, mods: Command,        chars: "\x02n" }  # select next tab
   - { key: LBracket, mods: Command,        chars: "\x02p" }  # select previous tab
   - { key: F,        mods: Command,        chars: "\x02[" }  # enter copy mode
+  # key movements
+  - { key: H,        mods: Command,        chars: "\x1b\x5b\x44" }  # move cursor left
+  - { key: J,        mods: Command,        chars: "\x1b\x5b\x42" }  # move cursor down
+  - { key: K,        mods: Command,        chars: "\x1b\x5b\x41" }  # move cursor up
+  - { key: L,        mods: Command,        chars: "\x1b\x5b\x43" }  # move cursor right
   # for Vim
-  - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC on Cmd-;
-  - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I on Cmd-I
-  - { key: O,         mods: Command,       chars: "\x20\x6f" } # send SPC-O on Cmd-O
-  - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-P on Cmd-P
+  - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC
+  - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I
+  - { key: O,         mods: Command,       chars: "\x20\x6f" } # send SPC-O
+  - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-P
+  - { key: R,         mods: Command,       chars: "\x67\x72" } # send gr (gr mapped to coc-rename in Vim config)
+  - { key: U,         mods: Command,       chars: "\x67\x75" } # send gu (gu mapped to coc-rename in Vim config)
+  - { key: M,         mods: Command,       chars: "\x67\x6d" } # send gm (gm mapped to coc-rename in Vim config)
