--- a/alacritty.yml
+++ b/alacritty.yml
@@ -70,6 +70,6 @@ key_bindings: # to get a code run "showkey -a" on a Linux system and get hex cod
   - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I
   - { key: O,         mods: Command,       chars: "\x20\x6f" } # send SPC-O
   - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-P
-  - { key: R,         mods: Command,       chars: "\x67\x72" } # send gr (gr mapped to coc-rename in Vim config)
-  - { key: U,         mods: Command,       chars: "\x67\x75" } # send gu (gu mapped to coc-rename in Vim config)
-  - { key: M,         mods: Command,       chars: "\x67\x6d" } # send gm (gm mapped to coc-rename in Vim config)
+  - { key: R,         mods: Command,       chars: "\x20\x72\x72" } # send SPCrr (mapped to coc-rename in vimrc)
+  - { key: M,         mods: Command,       chars: "\x20\x72\x6d" } # send SPCrm (mapped to coc-references in vimrc)
+  - { key: U,         mods: Command,       chars: "\x20\x72\x75" } # send SPCru (mapped to coc-format in vimrc)
