--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,11 @@ set-option -g status-position top
 # refresh status bar every 5 seconds
 set -g status-interval 5
 
+# transparent status background
+set -g status-bg colour248
+
 # selected tab as bold text
-set -g window-status-current-format "#[fg=white,bright,nodim][[#I#[fg=white,bright,nodim]#[fg=white,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
+set -g window-status-current-format "#[fg=black,bright,nodim][[#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
 
 # non selected tab as a usual text
 set -g window-status-format "  #I>#{b:pane_current_path}>#{b:pane_current_command}  "
