--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,17 +21,17 @@ set -g escape-time 0
 
 ##########  Status bar settings  ##########
 
-# move status bar to the top
-set-option -g status-position top
+# move status bar to the bottom
+set-option -g status-position bottom
 
 # refresh status bar every 5 seconds
 set -g status-interval 5
 
-# transparent status background
-set -g status-bg colour248
+# set default status colors
+set-option status-style fg=colour252,bg=black
 
 # selected tab as bold text
-set -g window-status-current-format "#[fg=black,bright,nodim][[#I#[fg=black,bright,nodim]#[fg=black,bright,nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
+set -g window-status-current-format "#[fg=nodim][[#I#[fg=nodim]#[fg=nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
 
 # non selected tab as a usual text
 set -g window-status-format "  #I>#{b:pane_current_path}>#{b:pane_current_command}  "
