Tmux and Vim: put Tmux tabs at the top, don't show Vim tabs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,13 +22,13 @@ set -g escape-time 0
 ##########  Status bar settings  ##########
 
 # move status bar to the bottom
-set-option -g status-position bottom
+set-option -g status-position top
 
 # refresh status bar every 5 seconds
 set -g status-interval 5
 
 # set default status colors
-set-option status-style fg=colour252,bg=black
+set-option status-style fg=black,bg=colour250
 
 # selected tab as bold text
 set -g window-status-current-format "#[fg=nodim][[#I#[fg=nodim]#[fg=nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
