Alacritty: use PaperColor theme with a different background

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set-option -g status-position top
 set -g status-interval 5
 
 # set default status colors
-set-option status-style fg=black,bg=colour250
+set-option status-style fg=colour7,bg=colour250
 
 # selected tab as bold text
 set -g window-status-current-format "#[fg=nodim][[#I#[fg=nodim]#[fg=nodim]>#{b:pane_current_path}>#{b:pane_current_command}]]"
