--- a/alacritty.yml
+++ b/alacritty.yml
@@ -72,13 +72,4 @@ key_bindings: # to get a code run "showkey -a" on a Linux system and get hex cod
   - { key: K,        mods: Command,        chars: "\x1b\x5b\x41" }  # move cursor up
   - { key: L,        mods: Command,        chars: "\x1b\x5b\x43" }  # move cursor right
   # for Vim
-  - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC
-  - { key: I,         mods: Command,       chars: "\x20\x69" } # send SPC-I
-  - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-P
-  - { key: F,         mods: Command,       chars: "\x20\x66" } # enter copy mode
-  - { key: Comma,     mods: Command,       chars: "\x20\x2c" } # send SPC-,
-  - { key: Period,    mods: Command,       chars: "\x20\x6f" } # send SPC-O
-  - { key: R,         mods: Command,       chars: "\x20\x72\x72" } # send SPCrr (mapped to coc-rename in vimrc)
-  - { key: M,         mods: Command,       chars: "\x20\x72\x6d" } # send SPCrm (mapped to coc-references in vimrc)
-  - { key: U,         mods: Command,       chars: "\x20\x72\x75" } # send SPCru (mapped to coc-format in vimrc)
-  - { key: Return,    mods: Command,       chars: "\x20\x72\x66" } # send SPCru (mapped to CocFix in vimrc)
+  - { key: Return,    mods: Command,       chars: "\x20\x72\x66" } # send SPCrf (mapped to CocFix in vimrc)
