Vim: show buffers as tabs, map single-keystroke bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ set -g escape-time 0
 ##########  Status bar settings  ##########
 
 # move status bar to the bottom
-set-option -g status-position top
+set-option -g status-position bottom
 
 # refresh status bar every 5 seconds
 set -g status-interval 5
