--- a/alacritty.yml
+++ b/alacritty.yml
@@ -72,4 +72,13 @@ key_bindings: # to get a code run "showkey -a" on a Linux system and get hex cod
   - { key: K,        mods: Command,        chars: "\x1b\x5b\x41" }  # move cursor up
   - { key: L,        mods: Command,        chars: "\x1b\x5b\x43" }  # move cursor right
   # for Vim
+  # hex codes are here: https://en.wikipedia.org/wiki/ASCII#Printable_characters
+  - { key: Semicolon, mods: Command,       chars: "\x20\x20" } # send SPC-SPC
+  - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-p
+  - { key: P,         mods: Command|Shift, chars: "\x20\x50" } # send SPC-P
+  - { key: F,         mods: Command,       chars: "\x20\x66" } # send SPC-f
+  - { key: Comma,     mods: Command,       chars: "\x20\x2c" } # send SPC-,
+  - { key: Period,    mods: Command,       chars: "\x20\x2e" } # send SPC-.
+  - { key: R,         mods: Command,       chars: "\x20\x72\x72" } # send SPCrr (mapped to coc-rename in vimrc)
+  - { key: M,         mods: Command,       chars: "\x20\x72\x6d" } # send SPCrm (mapped to coc-references in vimrc)
   - { key: Return,    mods: Command,       chars: "\x20\x72\x66" } # send SPCrf (mapped to CocFix in vimrc)
