Tmux: start panes at 1, not 0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 ##########  General settings  ##########
 
+# start panes at 1, not 0
+set -g base-index 1
+
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
 
