--- a/alacritty.yml
+++ b/alacritty.yml
@@ -71,10 +71,13 @@ key_bindings:
   - { key: RBracket, mods: Command|Shift,  chars: "\x02n" }  # select next Tmux tab (C-b n)
   - { key: LBracket, mods: Command|Shift,  chars: "\x02p" }  # select previous Tmux tab (C-b p)
   - { key: D,        mods: Command,        chars: "\x02[" }  # enter copy mode (C-b [)
-  - { key: Key1,     mods: Command,        chars: "\x02\x30" } # open 1st tab (C-b 0)
-  - { key: Key2,     mods: Command,        chars: "\x02\x31" } # open 2nd tab (C-b 1)
-  - { key: Key3,     mods: Command,        chars: "\x02\x32" } # open 3rd tab (C-b 2)
-  - { key: Key4,     mods: Command,        chars: "\x02\x33" } # open 4th tab (C-b 3)
+  - { key: Key1,     mods: Command,        chars: "\x02\x31" } # switch to 1st tab (C-b 1)
+  - { key: Key2,     mods: Command,        chars: "\x02\x32" } # switch to 2nd tab (C-b 2)
+  - { key: Key3,     mods: Command,        chars: "\x02\x33" } # switch to 3rd tab (C-b 3)
+  - { key: Key4,     mods: Command,        chars: "\x02\x34" } # switch to 4th tab (C-b 4)
+  - { key: Key5,     mods: Command,        chars: "\x02\x35" } # switch to 5th tab (C-b 5)
+  - { key: Key6,     mods: Command,        chars: "\x02\x36" } # switch to 6th tab (C-b 6)
+  - { key: Key7,     mods: Command,        chars: "\x02\x37" } # switch to 7th tab (C-b 7)
   # Vim project
   - { key: P,         mods: Command,       chars: "\x20\x70" } # send SPC-p
   - { key: P,         mods: Command|Shift, chars: "\x20\x50" } # send SPC-P
