--- a/alacritty.yml
+++ b/alacritty.yml
@@ -12,16 +12,17 @@ window:
     lines: 48
 
 font:
+  use_thin_stroke: true
   size: 15.0
   normal:
     family: JetBrains Mono
     style: Regular
   bold:
     family: JetBrains Mono
-    style: Bold
+    style: Regular
   italic:
     family: JetBrains Mono
-    style: Italic
+    style: Regular
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
