Vim: enable NerdTree plugin for WebStorm

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,4 +1,5 @@
 set clipboard+=unnamed
+set NERDTree
 
 nnoremap K 10k
 nnoremap J 10j
@@ -12,6 +13,7 @@ nnoremap <leader>i :e ~/work/notes/notes.txt<CR>
 nnoremap <leader><leader> :action SearchEverywhere<CR>
 nnoremap <leader>f :action FindInPath<CR>
 nnoremap <leader>. :action RecentFiles<CR>
+nmap <Leader>p :NERDTreeToggle<CR>
 
 nnoremap <leader>d :action CloseEditor<CR>
 nnoremap <leader>s :action SaveAll<CR>
